# fast-down

./: Cargo.toml
crates/cli/src/: download.rs
crates/core/src/base/: event.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  client.rs  common.rs  main.rs  render.rs  state.rs
crates/tui/src/widgets/: stats.rs
crates/tui/src/worker/: mod.rs
