[workspace]
members = ["crates/core", "crates/cli", "crates/gui", "crates/tui"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["share121 <2854631158@qq.com>"]
repository = "https://github.com/share121/fast-down"
readme = "README.md"
exclude = ["/.github"]

[workspace.dependencies]
fast-down = { version = "2.0.4", path = "crates/core" }
color-eyre = "0.6.5"
reqwest = { version = "0.12.22", features = [
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "http2",
    "rustls-tls",
    "socks",
    "macos-system-configuration",
], default-features = false }
clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1.47.0", default-features = false, features = [
    "io-std",
    "rt-multi-thread",
] }
path-clean = "1.0.1"
ctrlc = "3.4.7"
url = "2.5.4"
config = { version = "0.15.13", default-features = false, features = [
    "toml",
    "convert-case",
] }
mimalloc = "0.1.47"
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
tempfile = "3.20.0"
async-channel = "2.5.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
