[package]
name = "fast-down-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true

[dependencies]
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
fast-down = { workspace = true }
color-eyre.workspace = true
crossterm = "0.29.0"
oneshot = "0.1.11"
flume = "0.11.1"
tokio.workspace = true
futures = "0.3.31"
reqwest.workspace = true
fxhash = "0.2.1"
slab = "0.4.10"
rkyv = "0.8.10"
arboard = { version = "3.6.0", features = ["wayland-data-control"] }
async-channel.workspace = true
smallvec = "1.15.1"
thiserror = "2.0.12"
type-map = "0.5.1"
swimmer = "0.3.0"
